Day #6 100DaysOfCode & 301DaysOfCode

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
   </head>
   <body>
-    <header id="main-head"><h1>Basic Javascript 100DaysOfCode</h1></header>
+    <header id="main-head"><h1>Basic Javascript 100DaysOfCode & 301DaisOfCode</h1></header>
 
     <script src="basic.js"></script>
   </body>
